oracle/prod/booklore/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: booklore
spec:
  selector:
    app: mariadb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: booklore
  namespace: booklore
spec:
  type: NodePort
  selector:
    app: booklore
  ports:
    - protocol: TCP
      port: 6060
      targetPort: 6060
      nodePort: 30060
