oracle/prod/booklore/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: booklore
spec:
  rules:
    - host: booklore.haijin666.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: booklore
                port:
                  number: 6060
